# ytdownload

./: .gitignore  README.md  pyproject.toml
ytdown/: config.py  downloader.py
