[tool.poetry]
name = "ytdown"
version = "0.1.0"
description = ""
authors = ["clorose <gohan9511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yt-dlp = "^2024.12.13"
pyqt6 = "^6.8.0"
aiohttp = "^3.11.11"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
